--- a/index.html
+++ b/index.html
@@ -1,1 +1,239 @@
-N
+<!DOCTYPE html>
+<html lang="bg">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Валутен калкулатор на Алианц</title>
+<style>
+body{
+  background:#0f1724;
+  font-family:Arial;
+  display:flex;
+  justify-content:center;
+  margin-top:30px;
+  color:white;
+}
+.box{
+  width:380px;
+  background:#1b2435;
+  border-radius:14px;
+  overflow:hidden;
+  box-shadow:0 10px 30px rgba(0,0,0,0.6);
+}
+.header{
+  background:#003781;
+  padding:15px;
+  text-align:center;
+}
+.title{
+  font-size:18px;
+  font-weight:bold;
+}
+.content{
+  padding:20px;
+}
+.input-group{
+  display:flex;
+  align-items:center;
+  margin-bottom:10px;
+}
+.currency-symbol{
+  width:35px;
+  text-align:center;
+  font-weight:bold;
+  font-size:18px;
+}
+.display{
+  flex:1;
+  height:55px;
+  font-size:26px;
+  text-align:right;
+  background:#0f1724;
+  border:none;
+  border-radius:8px;
+  color:white;
+  padding:10px;
+}
+select{
+  flex:1;
+  padding:12px;
+  margin-left:8px;
+  background:#0f1724;
+  color:white;
+  border:none;
+  border-radius:8px;
+}
+.convert{
+  width:100%;
+  padding:14px;
+  background:#003781;
+  color:white;
+  font-size:18px;
+  border:none;
+  border-radius:8px;
+}
+.result{
+  text-align:center;
+  margin-top:15px;
+  font-size:22px;
+  color:#4da3ff;
+  font-weight:bold;
+}
+.buttons{
+  display:grid;
+  grid-template-columns:repeat(3,1fr);
+  gap:10px;
+  margin-top:20px;
+}
+button{
+  padding:18px;
+  font-size:20px;
+  background:#2a3650;
+  border:none;
+  border-radius:8px;
+  color:white;
+  cursor:pointer;
+}
+button:hover{
+  background:#3a4a70;
+}
+.zero{
+  grid-column:span 2;
+}
+.footer{
+  background:#003781;
+  padding:10px;
+  text-align:center;
+  font-size:12px;
+}
+.status{
+  font-size:12px;
+  text-align:center;
+  color:#aaa;
+  margin-bottom:5px;
+}
+</style>
+</head>
+<body>
+<div class="box">
+<div class="header">
+<div class="title">Валутен калкулатор на Алианц</div>
+</div>
+
+<div class="content">
+<div class="status" id="status">Зареждане на live курсове...</div>
+
+<div class="input-group">
+<div class="currency-symbol" id="symbol-from">€</div>
+<input id="amount" class="display" value="1">
+</div>
+
+<div class="input-group">
+<div class="currency-symbol" id="symbol-from-select">От:</div>
+<select id="from"></select>
+</div>
+
+<div class="input-group">
+<div class="currency-symbol" id="symbol-to">💵</div>
+<select id="to"></select>
+</div>
+
+<button class="convert" onclick="convert()">Конвертирай</button>
+<div id="result" class="result">0</div>
+
+<div class="buttons">
+<button onclick="num(7)">7</button>
+<button onclick="num(8)">8</button>
+<button onclick="clearDisplay()">C</button>
+<button onclick="num(4)">4</button>
+<button onclick="num(5)">5</button>
+<button onclick="num(6)">.</button>
+<button onclick="num(1)">1</button>
+<button onclick="num(2)">2</button>
+<button onclick="back()">←</button>
+<button class="zero" onclick="num(0)">0</button>
+</div>
+</div>
+
+<div class="footer">Allianz Exchange System</div>
+</div>
+
+<script>
+let rates={}
+
+async function load(){
+  try{
+    let res=await fetch("https://open.er-api.com/v6/latest/EUR")
+    let data=await res.json()
+    rates=data.rates
+
+    let from=document.getElementById("from")
+    let to=document.getElementById("to")
+    from.innerHTML=""
+    to.innerHTML=""
+    for(let c in rates){
+      let o1=document.createElement("option")
+      o1.value=c
+      o1.text=c
+      from.appendChild(o1)
+      let o2=document.createElement("option")
+      o2.value=c
+      o2.text=c
+      to.appendChild(o2)
+    }
+
+    // Default EUR → USD
+    from.value="EUR"
+    to.value="USD"
+
+    updateSymbols()
+
+    document.getElementById("status").innerHTML="✓ Live курсове заредени"
+    convert()
+  }catch{
+    document.getElementById("status").innerHTML="❌ Няма връзка с API"
+  }
+}
+
+// Автоматично обновяване на всеки 30 секунди
+setInterval(load, 30000)
+load()
+
+function updateSymbols(){
+  const from = document.getElementById("from").value
+  const to = document.getElementById("to").value
+  const symbols = {
+    "EUR":"€",
+    "USD":"💵",
+    "GBP":"£",
+    "JPY":"¥",
+    "ALL":"L",
+    "CHF":"CHF",
+    "CAD":"C$",
+    "AUD":"A$"
+  }
+  document.getElementById("symbol-from").innerText = symbols[from] || from
+  document.getElementById("symbol-to").innerText = symbols[to] || to
+}
+
+document.getElementById("from").addEventListener("change",updateSymbols)
+document.getElementById("to").addEventListener("change",updateSymbols)
+
+function num(n){
+  let a=document.getElementById("amount")
+  if(n=="."){if(!a.value.includes("."))a.value+=".";return}
+  if(a.value=="0")a.value=n
+  else a.value+=n
+}
+function clearDisplay(){document.getElementById("amount").value="0"}
+function back(){let a=document.getElementById("amount");a.value=a.value.slice(0,-1);if(a.value=="")a.value="0"}
+function convert(){
+  let amount=parseFloat(document.getElementById("amount").value)
+  let from=document.getElementById("from").value
+  let to=document.getElementById("to").value
+  let result=(amount/rates[from])*rates[to]
+  document.getElementById("result").innerHTML=amount+" "+from+" = "+result.toFixed(4)+" "+to
+}
+</script>
+</body>
+</html>
